Fix title cutoff on mobile after vertical align

--- a/style.css
+++ b/style.css
@@ -111,4 +111,8 @@ body #body p {
     #header h3 {
         font-size: 4.25vw;
     }
+
+    #container {
+        justify-content: flex-start;
+    }
   }
